--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">WorldClock</string>
+    <string name="app_name">World Clock</string>
+    <string name="picture_city">Picture of the City</string>
+    <string name="close_info">Hide Time</string>
+    <string name="open_info">Show Time</string>
+    <string name="twleveHr_btn">12 Hr</string>
+    <string name="twentyFourHr_btn">24 Hr</string>
 </resources>
